[gd_scene load_steps=2 format=2]

[ext_resource path="res://Objects/ComingObjects/ComingObject.gd" type="Script" id=1]

[node name="ComingObject" type="Sprite"]
z_index = 1
centered = false
offset = Vector2( 0.99, -274.22 )
script = ExtResource( 1 )

[node name="ComingTimer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true
[connection signal="timeout" from="ComingTimer" to="." method="_on_TavernEnterTimer_timeout"]
